--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,17 @@ services:
   mongodb:
     image: mongo:latest
     container_name: wallet-mongodb
+    command: ['--replSet', 'rs0', '--bind_ip_all']
     ports:
       - '27017:27017'
     volumes:
       - mongodb_data:/data/db
     environment:
       - MONGODB_DATABASE=wallet-db
+    healthcheck:
+      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongosh --quiet) -eq 1
+      interval: 10s
+      start_period: 30s
 
   api:
     build:
