--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -31,5 +31,5 @@ jobs:
           ECR_REPOSITORY: wallet-system-repo
           IMAGE_TAG: latest
         run: |
-          docker build --target prod -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
