--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build, tag, and push Docker image to Amazon ECR
         env:
           ECR_REGISTRY: 420232650319.dkr.ecr.eu-central-1.amazonaws.com
-          ECR_REPOSITORY: wallet-system-repo
+          ECR_REPOSITORY: wallet-system
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
